--- a/WebAppLexicon9/Views/Home/Index.cshtml
+++ b/WebAppLexicon9/Views/Home/Index.cshtml
@@ -1,6 +1,4 @@
-﻿<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
-
-@{
+﻿@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -174,6 +172,7 @@
     }
 </style>
 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
 
 
 <div class="container">
